<resources>
    <!--APP-->
    <string name="app_name">ALT: a light tracker</string>

    <!--ACTION BAR MENU-->
    <string name="menu_search_title">Search</string>
    <string name="menu_sort_sub_menu_title">Sort Options</string>

    <!--BOTTOM BAR MENU-->
    <string name="bottombar_title_market">Market</string>
    <string name="bottombar_title_tracker">Tracker</string>

    <!--SORT MENU-->
    <string name="sort_menu_market_cap">MCap</string>
    <string name="sort_menu_market_cap_reversed">MCap(reversed)</string>
    <string name="sort_menu_alphabetical">A-Z</string>
    <string name="sort_menu_alphabetical_reversed">Z-A</string>
    <string name="sort_menu_1H">1H change</string>
    <string name="sort_menu_1H_reversed">1H change(reversed)</string>
    <string name="sort_menu_24H">1D change</string>
    <string name="sort_menu_24H_reversed">1D change(reversed)</string>
    <string name="sort_menu_7D">1W change</string>
    <string name="sort_menu_7D_reversed">1W change(reversed)</string>
    <string name="sort_menu_vol">24H volume</string>
    <string name="sort_menu_vol_reversed">24H volume(reversed)</string>

    <!--MARKET SUMMARY-->
    <string name="market_summary_marketcap">MCap: %1$s</string>
    <string name="market_summary_volume">24H Vol: %1$s</string>
    <string name="market_summary_count">Items: %1$d</string>
    <string name="market_summary_1d">1D(avg): %1$s</string>
    <string name="market_summary_1w">1W(avg): %1$s</string>

    <!--ERRORS-->
    <string name="error_api_failure">There was a problem getting data, please try again.</string>
    <string name="error_general_error">There was a problem, please try again</string>
    <string name="error_transaction_failure">There was a problem adding your transaction.</string>
    <string name="error_sync_timeout">Last Sync was too recent.</string>

    <!--GENERAL TITLES-->
    <string name="title_valueBTC">Value(BTC): %1$s</string>
    <string name="title_valueUSD">Value(USD): %1$s</string>
    <string name="title_priceUSD">Price(USD): %1$s</string>
    <string name="title_priceBTC">Price(BTC): %1$s</string>

    <!--DIALOG ADDCOIN-->
    <string name="dialog_addCoin_hint_asset_search">Asset Search</string>
    <string name="dialog_addCoin_hint_select_a_coin">Select a Coin</string>
    <string name="dialog_addCoin_hint_exchange_optional">Exchange(optional)</string>
    <string name="dialog_addCoin_hint_quantity">Quantity</string>
    <string name="dialog_addCoin_hint_price_usd">Price(USD)</string>
    <string name="dialog_addCoin_hint_fees_optional">Fees(optional):</string>
    <string name="dialog_addCoin_hint_notes">Notes</string>

    <string name="dialog_addCoin_radio_buy">Buy</string>
    <string name="dialog_addCoin_radio_sell">Sell</string>
    <string name="dialog_addCoin_radio_mined">Mined</string>

    <string name="dialog_addCoin_title_purchase_value">Purchase Value: %1$s</string>
    <string name="dialog_addCoin_title_current_price">Current Price: %1$s</string>
    <string name="dialog_addCoin_title_current_value">Current Value: %1$s</string>

    <string name="dialog_addCoin_placeholder_purchase_value">$...</string>
    <string name="dialog_addCoin_placeholder_current_value">$...</string>

    <string name="dialog_addCoin_image_date_selection">Date selection button</string>

    <!--DIALOG COIN DETAIL-->
    <string name="dialog_coinDetail_title_doge_price">Price(DOGE):</string>
    <string name="dialog_coinDetail_title_rank">Rank:</string>
    <string name="dialog_coinDetail_title_sorted_rank">Rank(%1$s):</string>
    <string name="dialog_coinDetail_title_volume24h">Volume 24H:</string>
    <string name="dialog_coinDetail_title_available_supply">Available Supply:</string>
    <string name="dialog_coinDetail_title_total_supply">Total Supply:</string>
    <string name="dialog_coinDetail_title_marketcap">MarketCap:</string>
    <string name="dialog_coinDetail_dyor_title">Do Your Own Research</string>

    <string name="dialog_coinDetail_one_billion_coin">Price(1B coin): %1$s</string>

    <string name="dialog_coinDetail_radio_24h">24H</string>
    <string name="dialog_coinDetail_radio_1w">1W</string>
    <string name="dialog_coinDetail_radio_30d">30D</string>
    <string name="dialog_coinDetail_radio_90d">90D</string>
    <string name="dialog_coinDetail_radio_180d">180D</string>
    <string name="dialog_coinDetail_radio_1y">1Y</string>

    <string name="dialog_coinDetail_placeholder_doge_price">1 DOGE</string>

    <string name="dialog_coinDetail_image_chart_type_button">Chart type change button</string>

    <!--DIALOG TRACKER ENTRY-->
    <string name="dialog_trackerEntry_image_delete_button">Delete tracker entry button</string>

    <!--SNAPSHOT ACTIVITY-->
    <string name="activity_snapshot_image_snapshot_button">Take snapshot button</string>

    <!--SUMMARY FRAGMENT-->
    <string name="fragment_summary_current_value_usd">Current(USD): %1$s</string>
    <string name="fragment_summary_current_value_btc">Current(BTC): %1$s</string>
    <string name="fragment_summary_initial_value">Initial(USD): %1$s</string>
    <string name="fragment_summary_value_spent">Value Spent: %1$s</string>
    <string name="fragment_summary_value_sold">Value Sold: %1$s</string>
    <string name="fragment_summary_value_change">Change: %1$s (%2$s)</string>

    <!--TRACKER FRAGMENT-->
    <string name="fragment_tracker_image_show_snapshots">Show snapshots button</string>
    <string name="fragment_tracker_image_show_chart">Show pie chart button</string>
    <string name="fragment_tracker_image_hide_chart">Hide pie chart button</string>
    <string name="fragment_tracker_image_hide_summary">Hide summary area button</string>
    <string name="fragment_tracker_image_show_summary">Show summary area button</string>
    <string name="fragment_tracker_image_no_entries">No entries indicator</string>

    <string name="fragment_tracker_placeholder_no_entries">No entries yet, why not add one?</string>

    <!--COIN LIST ITEM-->
    <string name="item_coinList_title_1h">1H</string>
    <string name="item_coinList_title_1d">1D</string>
    <string name="item_coinList_title_1w">1W</string>

    <string name="item_coinList_image_favourite_unchecked">Favourite selector unchecked</string>
    <string name="item_coinList_image_favourite_checked">Favourite selector checked</string>
    <string name="item_coinList_image_indicator_one_hour">Indicator one hour</string>
    <string name="item_coinList_image_indicator_one_day">Indicator one day</string>
    <string name="item_coinList_image_indicator_one_week">Indicator one week</string>

    <!--TRACKER ENTRY ITEM-->
    <string name="item_trackerEntry_title_current">Current:</string>
    <string name="item_trackerEntry_title_value">Value:</string>
    <string name="item_trackerEntry_title_owned">Owned:</string>
    <string name="item_trackerEntry_title_dollar_cost_average">DCA:</string>
    <string name="item_trackerEntry_change">%1$s (%2$s)</string>

    <string name="item_trackerEntry_image_indicator">Indicator tracker entry</string>

    <!--TRANSACTION ITEM-->
    <string name="item_transactions_title_total">Total:</string>
    <string name="item_transaction_title_quantity">Qty:</string>
    <string name="item_transaction_title_price">Price:</string>

    <string name="item_transaction_image_delete">Transaction delete button</string>

    <!--TICKER TOP-->
    <string name="ticker_top_title_market_cap">MCap(ALL):</string>
    <string name="ticker_top_title_volume">Vol1D(ALL):</string>
    <string name="ticker_top_title_1d">1D(%1$d):</string>
    <string name="ticker_top_title_1W">1W(%1$d):</string>

    <!--TICKER BOTTOM-->
    <string name="ticker_bottom_time_stamp" formatted="false">Updated: %1$s</string>
    <string name="ticker_bottom_sort_type" formatted="false">Sorted by: %1$s</string>


    <!--ICON PACKS-->
    <string name="icon_pack_default">"Emoticon Faces"</string>
    <string name="icon_pack_arrows">"Arrows"</string>
    <string name="icon_pack_signals">"Signal Strength"</string>
    <string name="icon_pack_dice">"Dice"</string>
    <string name="hidden_values">\???????.??</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_transactions_delete_confirmation">This will delete this transaction irreversibly. Are you sure?</string>
    <string name="tracker_dialog_delete_confirmation">This will delete ALL transactions for this asset irreversibly. Are you sure?</string>
    <!--Settings Arrays-->

    <string-array name="market_size_options">
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>

    <string-array name="currency_options">
        <item>US Dollars</item>
    </string-array>

    <string-array name="loading_messages">
        <item>FUD: Fear, Uncertainty, and Doubt :(</item>
        <item>FOMO: Fear Of Missing Out</item>
        <item>HODL: Typo meme of HOLD</item>
        <item>MOON: When a crypto asset increases significantly and quickly</item>
        <item>DYOR: Do Your Own Research</item>
        <item>ELI5: Explain Like I am 5</item>
        <item>1 Doge = 1 Doge</item>
    </string-array>

    <string-array name="sort_options">
        <item>@string/sort_menu_market_cap</item>
        <item>@string/sort_menu_market_cap_reversed</item>
        <item>@string/sort_menu_alphabetical</item>
        <item>@string/sort_menu_alphabetical_reversed</item>
        <item>@string/sort_menu_1H</item>
        <item>@string/sort_menu_1H_reversed</item>
        <item>@string/sort_menu_24H</item>
        <item>@string/sort_menu_24H_reversed</item>
        <item>@string/sort_menu_7D</item>
        <item>@string/sort_menu_7D_reversed</item>
        <item>@string/sort_menu_vol</item>
        <item>@string/sort_menu_vol_reversed</item>
    </string-array>

    <string-array name="icon_pack_options">
        <item>@string/icon_pack_default</item>
        <item>@string/icon_pack_arrows</item>
        <item>@string/icon_pack_signals</item>
        <item>@string/icon_pack_dice</item>
    </string-array>
</resources>
