<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_xLarge_16dp">

        <TextView
            android:id="@+id/selected_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_large_8dp"
            android:gravity="center"
            android:hint="@string/dialog_addCoin_hint_select_a_coin"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_xLarge_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/asset_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginTop="@dimen/margin_small_4dp"
            android:background="@drawable/background_gradient_180"
            android:hint="@string/dialog_addCoin_hint_asset_search"
            android:textStyle="bold"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:nextFocusDown="@id/cost_per_item"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_coin" />

        <EditText
            android:id="@+id/exchange_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginTop="@dimen/margin_xLarge_16dp"
            android:background="@drawable/background_gradient_180"
            android:hint="@string/dialog_addCoin_hint_exchange_optional"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:nextFocusDown="@id/transaction_notes"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_current_title" />

        <EditText
            android:id="@+id/quantity_purchased"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_small_4dp"
            android:background="@drawable/background_gradient_180"
            android:hint="@string/dialog_addCoin_hint_quantity"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/cost_per_item"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toStartOf="@id/cost_per_item"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asset_search" />

        <EditText
            android:id="@+id/cost_per_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_small_4dp"
            android:background="@drawable/background_gradient_180"
            android:hint="@string/dialog_addCoin_hint_price_usd"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/transaction_fees"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toStartOf="@id/transaction_fees"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/quantity_purchased"
            app:layout_constraintTop_toBottomOf="@id/asset_search" />

        <EditText
            android:id="@+id/transaction_fees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginTop="@dimen/margin_small_4dp"
            android:background="@drawable/background_gradient_180"
            android:hint="@string/dialog_addCoin_hint_fees_optional"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/exchange_used"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/cost_per_item"
            app:layout_constraintTop_toBottomOf="@id/asset_search" />

        <TextView
            android:id="@+id/current_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_8dp"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_large_8dp"
            android:text="@string/dialog_addCoin_title_current_price"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_fees" />

        <TextView
            android:id="@+id/value_at_purchase_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_8dp"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_large_8dp"
            android:text="@string/dialog_addCoin_title_purchase_value"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_price_title" />

        <TextView
            android:id="@+id/value_current_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_8dp"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            android:layout_marginTop="@dimen/margin_large_8dp"
            android:text="@string/dialog_addCoin_title_current_value"
            android:textColor="@color/colorOffWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_at_purchase_title" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/transaction_date_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dialog_addCoin_image_date_selection"
            android:src="@drawable/ic_calendar_24dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/exchange_used"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_fees" />

        <TextView
            android:id="@+id/date_of_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorOffWhite"
            android:layout_marginEnd="@dimen/margin_large_8dp"
            app:layout_constraintBottom_toBottomOf="@id/transaction_date_select"
            app:layout_constraintEnd_toStartOf="@id/transaction_date_select"
            app:layout_constraintTop_toTopOf="@id/transaction_date_select" />

        <EditText
            android:id="@+id/transaction_notes"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/margin_small_4dp"
            android:layout_marginTop="@dimen/margin_small_4dp"
            android:background="@drawable/background_gradient_180"
            android:gravity="top|start"
            android:hint="Notes(optional)"
            android:padding="@dimen/margin_small_4dp"
            android:textColor="@color/colorOffWhite"
            android:textColorHint="@color/colorOffWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exchange_used" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/add_coin_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_coin_button"
            android:padding="@dimen/margin_large_8dp"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <ImageView
            android:id="@+id/add_coin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large_8dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_large_8dp"
            android:src="@drawable/ic_check_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
